--- a/package.json
+++ b/package.json
@@ -41,5 +41,7 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
-  }
+  },
+  "homepage": "https://vanhouttestien.github.io/wetAndRestless/
+
 }
