--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://vanhouttestien.github.io/wetAndRestless/
+  "homepage": "https://vanhouttestien.github.io/wetAndRestless/"
 
 }
